syntax = "proto3";

package order;

option go_package = "proto/pb";

// OrderService defines the gRPC service for managing orders.
service OrderService {
  // Create a new order
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);

  // Get an order by its ID
  rpc GetOrderByID(GetOrderByIDRequest) returns (GetOrderByIDResponse);

  // Update the status of an order
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);

  // Update the payment status of an order
  rpc UpdatePaymentStatus(UpdatePaymentStatusRequest) returns (UpdatePaymentStatusResponse);

  // Delete an order by its ID
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);

  // Get all orders for a specific user
  rpc GetAllOrders(GetAllOrdersRequest) returns (GetAllOrdersResponse);
}

// Message definitions for CreateOrder
message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
  string shipping_address = 3;
  string billing_address = 4;
}

message CreateOrderResponse {
  uint32 order_id = 1;
}

// Message definitions for GetOrderByID
message GetOrderByIDRequest {
  uint32 order_id = 1;
}

message GetOrderByIDResponse {
  Order order = 1;
}

// Message definitions for UpdateOrderStatus
message UpdateOrderStatusRequest {
  uint32 order_id = 1;
  string status = 2;
}

message UpdateOrderStatusResponse {
  string message = 1;
}

// Message definitions for UpdatePaymentStatus
message UpdatePaymentStatusRequest {
  uint32 order_id = 1;
  string payment_status = 2;
}

message UpdatePaymentStatusResponse {
  string message = 1;
}

// Message definitions for DeleteOrder
message DeleteOrderRequest {
  uint32 order_id = 1;
}

message DeleteOrderResponse {
  string message = 1;
}

// Message definitions for GetAllOrders
message GetAllOrdersRequest {
  string user_id = 1;
}

message GetAllOrdersResponse {
  repeated Order orders = 1;
}

// Order and OrderItem message definitions
message Order {
  uint32 id = 1;
  string user_id = 2;
  string order_status = 3;
  string payment_status = 4;
  float total_amount = 5;
  string shipping_address = 6;
  string billing_address = 7;
  string created_at = 8;
  string updated_at = 9;
  repeated OrderItem items = 10;
}

message OrderItem {
  uint32 id = 1;
  string product_id = 2;
  float product_price = 3;
  uint32 quantity = 4;
  float total_price = 5;
}